new/y.output
Nonterminals useless in grammar

    TypeSwitchStmt
    TypeSwitchGuard
    TypeCaseClauseList
    TypeCaseClause
    TypeSwitchCase


Terminals unused in grammar

    EOL
    METHOD
    NEW
    IOTA
    FLOAT_HEX
    CONST_INT_ERR
    CONST_BIN_ERR
    INT
    STRING
    COMPLEXTYPE
    BYTE
    FLOAT
    RUNE
    UINT
    BOOL_TYPE
    UINTPTR
    ERRORTYPE
    ANYTYPE
    COMPARABLE


Rules useless in grammar

  309 TypeSwitchStmt: SWITCH TypeSwitchGuard '{' TypeCaseClauseList '}'
  310               | SWITCH SimpleStmt SEMICOLON TypeSwitchGuard '{' TypeCaseClauseList '}'

  311 TypeSwitchGuard: id PEQ PrimaryExpr '.' '(' TYPE ')'
  312                | PrimaryExpr '.' '(' TYPE ')'

  313 TypeCaseClauseList: TypeCaseClause TypeCaseClauseList
  314                   | TypeCaseClause

  315 TypeCaseClause: TypeSwitchCase ':' Statements

  316 TypeSwitchCase: CASE TypeList
  317               | DEFAULT


Rules useless in parser due to conflicts

   31 ForClause: SimpleStmt SEMICOLON SEMICOLON
   32          | SimpleStmt SEMICOLON Expression SEMICOLON
   34          | SEMICOLON Expression SEMICOLON

  212 Key: LiteralValue

  214 Element: LiteralValue


State 16 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 26 conflicts: 10 shift/reduce
State 27 conflicts: 1 shift/reduce
State 35 conflicts: 10 shift/reduce
State 39 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 83 conflicts: 41 shift/reduce
State 106 conflicts: 1 shift/reduce, 7 reduce/reduce
State 128 conflicts: 5 shift/reduce
State 130 conflicts: 2 shift/reduce
State 174 conflicts: 2 shift/reduce, 5 reduce/reduce
State 178 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 181 conflicts: 27 shift/reduce
State 183 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 186 conflicts: 42 shift/reduce
State 206 conflicts: 5 shift/reduce, 1 reduce/reduce
State 208 conflicts: 42 shift/reduce
State 211 conflicts: 1 shift/reduce, 4 reduce/reduce
State 236 conflicts: 1 shift/reduce, 4 reduce/reduce
State 239 conflicts: 3 reduce/reduce
State 248 conflicts: 2 shift/reduce
State 293 conflicts: 1 shift/reduce
State 318 conflicts: 5 shift/reduce
State 321 conflicts: 5 shift/reduce
State 322 conflicts: 2 shift/reduce, 6 reduce/reduce
State 323 conflicts: 5 shift/reduce, 3 reduce/reduce
State 354 conflicts: 1 shift/reduce, 6 reduce/reduce
State 356 conflicts: 2 reduce/reduce
State 362 conflicts: 19 shift/reduce
State 370 conflicts: 5 shift/reduce
State 388 conflicts: 1 shift/reduce
State 402 conflicts: 5 shift/reduce
State 423 conflicts: 2 reduce/reduce
State 447 conflicts: 41 shift/reduce
State 452 conflicts: 1 shift/reduce, 1 reduce/reduce
State 453 conflicts: 1 shift/reduce, 1 reduce/reduce
State 465 conflicts: 41 shift/reduce
State 481 conflicts: 41 shift/reduce, 3 reduce/reduce
State 487 conflicts: 1 shift/reduce, 1 reduce/reduce
State 492 conflicts: 41 shift/reduce, 3 reduce/reduce


Grammar

    0 $accept: prog $end

    1 prog: PACKAGE IMPORTS
    2     | prog TopLevelDecl

    3 TopLevelDecl: Declaration
    4             | FunctionDecl
    5             | MethodDecl

    6 FunctionDecl: FUNCTION id TypeParameters Signature Block
    7             | FUNCTION id Signature Block
    8             | FUNCTION id Signature
    9             | FUNCTION id TypeParameters Signature

   10 MethodDecl: FUNCTION Receiver MethodName Signature Block

   11 Receiver: Parameters

   12 Statement: Declaration
   13          | SimpleStmt
   14          | GoStmt
   15          | ReturnStmt
   16          | BreakStmt
   17          | ContinueStmt
   18          | GotoStmt
   19          | FALLTHROUGH
   20          | Block
   21          | IfStmt
   22          | SwitchStmt
   23          | SelectStmt
   24          | ForStmt
   25          | DeferStmt

   26 ForStmt: FOR Expression Block
   27        | FOR ForClause Block
   28        | FOR RangeClause Block
   29        | FOR Block

   30 ForClause: SimpleStmt SEMICOLON Expression SEMICOLON SimpleStmt
   31          | SimpleStmt SEMICOLON SEMICOLON
   32          | SimpleStmt SEMICOLON Expression SEMICOLON
   33          | SimpleStmt SEMICOLON SEMICOLON SimpleStmt
   34          | SEMICOLON Expression SEMICOLON
   35          | SEMICOLON Expression SEMICOLON SimpleStmt
   36          | SEMICOLON SEMICOLON SimpleStmt

   37 RangeClause: ExpressionList EQ RANGE Expression
   38            | IdentifierList PEQ RANGE Expression
   39            | RANGE Expression

   40 DeferStmt: DEFER Expression

   41 Declaration: ConstDecl
   42            | TypeDecl
   43            | VarDecl

   44 GoStmt: GO Expression

   45 ReturnStmt: RETURN ExpressionList
   46           | RETURN

   47 BreakStmt: BREAK Label
   48          | BREAK

   49 ContinueStmt: CONTINUE Label
   50             | CONTINUE

   51 GotoStmt: GOTO Label
   52         | GOTO

   53 Label: id

   54 SelectStmt: SELECT '{' CommClauseList '}'
   55           | SELECT '{' '}'

   56 CommClauseList: CommClauseList CommClause
   57               | CommClause

   58 CommClause: CommCase ':' Statements

   59 CommCase: CASE SendStmt
   60         | CASE RecvStmt
   61         | DEFAULT

   62 RecvStmt: ExpressionList EQ RecvExpr
   63         | IdentifierList PEQ RecvExpr
   64         | RecvExpr

   65 RecvExpr: Expression

   66 IfStmt: IF SimpleStmt SEMICOLON Expression Block ELSE IfStmt
   67       | IF SimpleStmt SEMICOLON Expression Block ELSE Block
   68       | IF SimpleStmt SEMICOLON Expression Block
   69       | IF Expression Block
   70       | IF Expression Block ELSE IfStmt
   71       | IF Expression Block ELSE Block

   72 SwitchStmt: ExprSwitchStmt

   73 ExprSwitchStmt: SWITCH SimpleStmt SEMICOLON Expression '{' ExprCaseClauseList '}'
   74               | SWITCH SimpleStmt SEMICOLON '{' ExprCaseClauseList '}'
   75               | SWITCH Expression '{' ExprCaseClauseList '}'
   76               | SWITCH '{' ExprCaseClauseList '}'

   77 ExprCaseClauseList: ExprCaseClause ExprCaseClauseList
   78                   | ExprCaseClause

   79 ExprCaseClause: ExprSwitchCase ':' Statements

   80 ExprSwitchCase: CASE ExpressionList
   81               | DEFAULT

   82 ConstDecl: CONST ConstSpec
   83          | CONST '(' ConstSpecList ')'
   84          | CONST '(' ')'

   85 ConstSpecList: ConstSpec ConstSpecList
   86              | ConstSpec

   87 ConstSpec: IdentifierList ConstExpr
   88          | IdentifierList

   89 ConstExpr: Type EQ ExpressionList
   90          | EQ ExpressionList

   91 TypeDecl: TYPE TypeSpec
   92         | TYPE '(' TypeSpecList ')'
   93         | TYPE '(' ')'

   94 TypeSpecList: TypeSpec TypeSpecList
   95             | TypeSpec

   96 TypeSpec: AliasDecl
   97         | TypeDef

   98 AliasDecl: id EQ Type

   99 TypeDef: id TypeParameters Type

  100 TypeParameters: '[' TypeParamList ']'
  101               | '[' TypeParamList ',' ']'
  102               | ε

  103 TypeParamList: TypeParamDecl ',' TypeParamList
  104              | TypeParamDecl

  105 TypeParamDecl: IdentifierList TypeConstraint

  106 TypeConstraint: TypeElem

  107 VarDecl: VAR VarSpec
  108        | VAR '(' VarSpecList ')'
  109        | VAR '(' ')'

  110 VarSpecList: VarSpec VarSpecList
  111            | VarSpec

  112 VarSpec: IdentifierList Type
  113        | IdentifierList Type EQ ExpressionList
  114        | IdentifierList EQ ExpressionList

  115 SimpleStmt: Assignment
  116           | Expression
  117           | SendStmt
  118           | IncDecStmt
  119           | EmptyStatement

  120 EmptyStatement: ε

  121 SendStmt: Channel POINTER Expression

  122 Channel: Expression

  123 IncDecStmt: Expression INC
  124           | Expression DEC

  125 Assignment: IdentifierList PEQ ExpressionList
  126           | IdentifierList EQ ExpressionList
  127           | ExpressionList EQ ExpressionList
  128           | ExpressionList ADDEQ ExpressionList
  129           | ExpressionList DIVEQ ExpressionList
  130           | ExpressionList DECEQ ExpressionList
  131           | ExpressionList MULEQ ExpressionList
  132           | ExpressionList MODEQ ExpressionList
  133           | ExpressionList LSHIFTEQ ExpressionList
  134           | ExpressionList RSHIFTEQ ExpressionList
  135           | ExpressionList XOREQ ExpressionList
  136           | ExpressionList ANDXOREQ ExpressionList
  137           | ExpressionList ANDEQ ExpressionList
  138           | ExpressionList OREQ ExpressionList

  139 Expression: UnaryExpr
  140           | Expression binary_op Expression

  141 binary_op: OR
  142          | AND
  143          | rel_op
  144          | add_op
  145          | mul_op

  146 mul_op: '*'
  147       | '/'
  148       | '%'
  149       | LSHIFT
  150       | RSHIFT
  151       | '&'
  152       | AMP_EXP

  153 add_op: '-'
  154       | XOR
  155       | '|'
  156       | '+'

  157 rel_op: EQUAL
  158       | NOTEQUAL
  159       | '<'
  160       | '>'
  161       | LESSOREQUAL
  162       | GREATEROREQUAL

  163 UnaryExpr: PrimaryExpr
  164          | '+' UnaryExpr
  165          | '-' UnaryExpr
  166          | '!' UnaryExpr
  167          | XOR UnaryExpr
  168          | '*' UnaryExpr
  169          | '&' UnaryExpr
  170          | POINTER UnaryExpr

  171 PrimaryExpr: Operand
  172            | PrimaryExpr Arguments
  173            | MethodExpr
  174            | Conversion
  175            | PrimaryExpr Selector
  176            | PrimaryExpr Index
  177            | PrimaryExpr Slice
  178            | PrimaryExpr TypeAssertion

  179 Conversion: Type '(' ExpressionList ')'
  180           | Type '(' ExpressionList ',' ')'

  181 MethodExpr: Type '.' MethodName

  182 MethodName: id

  183 Operand: OperandName
  184        | BasicLit
  185        | CompositeLit
  186        | FunctionLit
  187        | '(' ExpressionList ')'

  188 BasicLit: int_lit
  189         | float_lit
  190         | imaginary_lit
  191         | RUNE_LIT
  192         | CONST_CHAR
  193         | CONST_STRING
  194         | BOOL

  195 CompositeLit: LiteralType LiteralValue
  196             | LiteralValue

  197 LiteralType: StructType
  198            | ArrayType
  199            | '[' POINT ']' Type
  200            | SliceType
  201            | MapType
  202            | id

  203 LiteralValue: '{' ElementList '}'
  204             | '{' ElementList ',' '}'
  205             | '{' '}'

  206 ElementList: ElementList ',' KeyedElement
  207            | KeyedElement

  208 KeyedElement: Key ':' Element
  209             | Element

  210 Key: id
  211    | Expression
  212    | LiteralValue

  213 Element: Expression
  214        | LiteralValue

  215 OperandName: id
  216            | id '.' OperandName

  217 int_lit: CONST_BIN
  218        | CONST_HEX
  219        | CONST_OCTAL
  220        | CONST_INT

  221 imaginary_lit: IMAGINARY_LIT

  222 float_lit: DECIMAL_FLOAT_LIT
  223          | HEX_FLOAT_LIT

  224 FunctionLit: FUNCTION Signature Block

  225 Block: '{' Statements '}'

  226 Statements: Statements Statement
  227           | Statement

  228 Selector: '.' id

  229 Index: '[' Expression ']'
  230      | '[' Expression ',' ']'

  231 Slice: '[' Expression ':' Expression ']'
  232      | '[' ':' Expression ']'
  233      | '[' Expression ':' ']'
  234      | '[' ':' ']'
  235      | '[' Expression ':' Expression ':' Expression ']'
  236      | '[' ':' Expression ':' Expression ']'

  237 TypeAssertion: '.' '(' Type ')'

  238 Arguments: '(' ExpressionList ')'
  239          | '(' ExpressionList ',' ')'
  240          | '(' ExpressionList POINT ')'
  241          | '(' Type ',' ')'
  242          | '(' Type POINT ')'
  243          | '(' Type ')'
  244          | '(' Type ',' ExpressionList ')'
  245          | '(' ')'

  246 ExpressionList: ExpressionList ',' Expression
  247               | Expression

  248 Type: TypeName
  249     | TypeName TypeArgs
  250     | '(' Type ')'
  251     | ArrayType
  252     | PointerType
  253     | StructType
  254     | FunctionType
  255     | InterfaceType
  256     | SliceType
  257     | MapType
  258     | ChannelType

  259 TypeArgs: '[' TypeList ']'
  260         | '[' TypeList ',' ']'

  261 TypeList: Type ',' TypeList
  262         | Type

  263 TypeName: id
  264         | id '.' TypeName

  265 ArrayType: '[' Expression ']' Type

  266 StructType: STRUCT '{' DeclList '}'
  267           | STRUCT '{' '}'

  268 DeclList: FieldDecl DeclList
  269         | FieldDecl

  270 FieldDecl: IdentifierList Type CONST_STRING
  271          | IdentifierList Type
  272          | EmbeddedField CONST_STRING
  273          | EmbeddedField

  274 EmbeddedField: '*' TypeName TypeArgs
  275              | TypeName TypeArgs
  276              | '*' TypeName
  277              | TypeName

  278 PointerType: '*' Type

  279 FunctionType: FUNCTION Signature

  280 Signature: Parameters Parameters
  281          | Parameters
  282          | Parameters Type

  283 Parameters: '(' ParameterList ')'
  284           | '(' ')'
  285           | '(' ParameterList ',' ')'

  286 ParameterList: ParameterDecl ',' ParameterList
  287              | ParameterDecl

  288 ParameterDecl: IdentifierList POINT Type
  289              | IdentifierList Type
  290              | IdentifierList
  291              | POINT Type

  292 IdentifierList: id
  293               | id ',' IdentifierList

  294 InterfaceType: INTERFACE '{' InterfaceElemList '}'
  295              | INTERFACE '{' '}'

  296 InterfaceElemList: InterfaceElem InterfaceElemList
  297                  | InterfaceElem

  298 InterfaceElem: id Signature
  299              | TypeElem

  300 TypeElem: TypeTerm '|' TypeElem
  301         | TypeTerm

  302 TypeTerm: id
  303         | '~' Type

  304 SliceType: '[' ']' Type

  305 MapType: MAP '[' Type ']' Type

  306 ChannelType: CHAN Type
  307            | CHAN POINTER id
  308            | POINTER CHAN Type


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 166
    '%' (37) 148
    '&' (38) 151 169
    '(' (40) 83 84 92 93 108 109 179 180 187 237 238 239 240 241 242 243 244 245 250 283 284 285
    ')' (41) 83 84 92 93 108 109 179 180 187 237 238 239 240 241 242 243 244 245 250 283 284 285
    '*' (42) 146 168 274 276 278
    '+' (43) 156 164
    ',' (44) 101 103 180 204 206 230 239 241 244 246 260 261 285 286 293
    '-' (45) 153 165
    '.' (46) 181 216 228 237 264
    '/' (47) 147
    ':' (58) 58 79 208 231 232 233 234 235 236
    '<' (60) 159
    '>' (62) 160
    '[' (91) 100 101 199 229 230 231 232 233 234 235 236 259 260 265 304 305
    ']' (93) 100 101 199 229 230 231 232 233 234 235 236 259 260 265 304 305
    '{' (123) 54 55 73 74 75 76 203 204 205 225 266 267 294 295
    '|' (124) 155 300
    '}' (125) 54 55 73 74 75 76 203 204 205 225 266 267 294 295
    '~' (126) 303
    error (256)
    PACKAGE (258) 1
    IMPORTS (259) 1
    FUNCTION (260) 6 7 8 9 10 224 279
    id (261) 6 7 8 9 53 98 99 182 202 210 215 216 228 263 264 292 293 298 302 307
    VAR (262) 107 108 109
    EOL (263)
    CONST (264) 82 83 84
    METHOD (265)
    IF (266) 66 67 68 69 70 71
    ELSE (267) 66 67 70 71
    SWITCH (268) 73 74 75 76
    CASE (269) 59 60 80
    FALLTHROUGH (270) 19
    DEFAULT (271) 61 81
    FOR (272) 26 27 28 29
    BREAK (273) 47 48
    RANGE (274) 37 38 39
    NEW (275)
    SELECT (276) 54 55
    RETURN (277) 45 46
    MAP (278) 305
    GO (279) 44
    GOTO (280) 51 52
    INTERFACE (281) 294 295
    CHAN (282) 306 307 308
    CONTINUE (283) 49 50
    DEFER (284) 40
    CONST_INT (285) 220
    CONST_CHAR (286) 192
    CONST_STRING (287) 193 270 272
    BOOL (288) 194
    IOTA (289)
    CONST_OCTAL (290) 219
    CONST_HEX (291) 218
    CONST_BIN (292) 217
    FLOAT_HEX (293)
    DECIMAL_FLOAT_LIT (294) 222
    HEX_FLOAT_LIT (295) 223
    RUNE_LIT (296) 191
    IMAGINARY_LIT (297) 221
    CONST_INT_ERR (298)
    CONST_BIN_ERR (299)
    INT (300)
    STRING (301)
    COMPLEXTYPE (302)
    BYTE (303)
    FLOAT (304)
    RUNE (305)
    UINT (306)
    BOOL_TYPE (307)
    TYPE (308) 91 92 93
    STRUCT (309) 266 267
    UINTPTR (310)
    ERRORTYPE (311)
    ANYTYPE (312)
    COMPARABLE (313)
    ADDEQ (314) 128
    DECEQ (315) 130
    OREQ (316) 138
    XOREQ (317) 135
    MULEQ (318) 131
    DIVEQ (319) 129
    MODEQ (320) 132
    LSHIFTEQ (321) 133
    RSHIFTEQ (322) 134
    ANDEQ (323) 137
    ANDXOREQ (324) 136
    EQ (325) 37 62 89 90 98 113 114 126 127
    INC (326) 123
    DEC (327) 124
    EQUAL (328) 157
    NOTEQUAL (329) 158
    GREATEROREQUAL (330) 162
    LESSOREQUAL (331) 161
    AND (332) 142
    OR (333) 141
    LSHIFT (334) 149
    RSHIFT (335) 150
    PEQ (336) 38 63 125
    XOR (337) 154 167
    SEMICOLON (338) 30 31 32 33 34 35 36 66 67 68 73 74
    AMP_EXP (339) 152
    POINT (340) 199 240 242 288 291
    POINTER (341) 121 170 307 308


Nonterminals, with rules where they appear

    $accept (107)
        on left: 0
    prog (108)
        on left: 1 2
        on right: 0 2
    TopLevelDecl (109)
        on left: 3 4 5
        on right: 2
    FunctionDecl (110)
        on left: 6 7 8 9
        on right: 4
    MethodDecl (111)
        on left: 10
        on right: 5
    Receiver (112)
        on left: 11
        on right: 10
    Statement (113)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 226 227
    ForStmt (114)
        on left: 26 27 28 29
        on right: 24
    ForClause (115)
        on left: 30 31 32 33 34 35 36
        on right: 27
    RangeClause (116)
        on left: 37 38 39
        on right: 28
    DeferStmt (117)
        on left: 40
        on right: 25
    Declaration (118)
        on left: 41 42 43
        on right: 3 12
    GoStmt (119)
        on left: 44
        on right: 14
    ReturnStmt (120)
        on left: 45 46
        on right: 15
    BreakStmt (121)
        on left: 47 48
        on right: 16
    ContinueStmt (122)
        on left: 49 50
        on right: 17
    GotoStmt (123)
        on left: 51 52
        on right: 18
    Label (124)
        on left: 53
        on right: 47 49 51
    SelectStmt (125)
        on left: 54 55
        on right: 23
    CommClauseList (126)
        on left: 56 57
        on right: 54 56
    CommClause (127)
        on left: 58
        on right: 56 57
    CommCase (128)
        on left: 59 60 61
        on right: 58
    RecvStmt (129)
        on left: 62 63 64
        on right: 60
    RecvExpr (130)
        on left: 65
        on right: 62 63 64
    IfStmt (131)
        on left: 66 67 68 69 70 71
        on right: 21 66 70
    SwitchStmt (132)
        on left: 72
        on right: 22
    ExprSwitchStmt (133)
        on left: 73 74 75 76
        on right: 72
    ExprCaseClauseList (134)
        on left: 77 78
        on right: 73 74 75 76 77
    ExprCaseClause (135)
        on left: 79
        on right: 77 78
    ExprSwitchCase (136)
        on left: 80 81
        on right: 79
    ConstDecl (137)
        on left: 82 83 84
        on right: 41
    ConstSpecList (138)
        on left: 85 86
        on right: 83 85
    ConstSpec (139)
        on left: 87 88
        on right: 82 85 86
    ConstExpr (140)
        on left: 89 90
        on right: 87
    TypeDecl (141)
        on left: 91 92 93
        on right: 42
    TypeSpecList (142)
        on left: 94 95
        on right: 92 94
    TypeSpec (143)
        on left: 96 97
        on right: 91 94 95
    AliasDecl (144)
        on left: 98
        on right: 96
    TypeDef (145)
        on left: 99
        on right: 97
    TypeParameters (146)
        on left: 100 101 102
        on right: 6 9 99
    TypeParamList (147)
        on left: 103 104
        on right: 100 101 103
    TypeParamDecl (148)
        on left: 105
        on right: 103 104
    TypeConstraint (149)
        on left: 106
        on right: 105
    VarDecl (150)
        on left: 107 108 109
        on right: 43
    VarSpecList (151)
        on left: 110 111
        on right: 108 110
    VarSpec (152)
        on left: 112 113 114
        on right: 107 110 111
    SimpleStmt (153)
        on left: 115 116 117 118 119
        on right: 13 30 31 32 33 35 36 66 67 68 73 74
    EmptyStatement (154)
        on left: 120
        on right: 119
    SendStmt (155)
        on left: 121
        on right: 59 117
    Channel (156)
        on left: 122
        on right: 121
    IncDecStmt (157)
        on left: 123 124
        on right: 118
    Assignment (158)
        on left: 125 126 127 128 129 130 131 132 133 134 135 136 137 138
        on right: 115
    Expression (159)
        on left: 139 140
        on right: 26 30 32 34 35 37 38 39 40 44 65 66 67 68 69 70 71 73 75 116 121 122 123 124 140 211 213 229 230 231 232 233 235 236 246 247 265
    binary_op (160)
        on left: 141 142 143 144 145
        on right: 140
    mul_op (161)
        on left: 146 147 148 149 150 151 152
        on right: 145
    add_op (162)
        on left: 153 154 155 156
        on right: 144
    rel_op (163)
        on left: 157 158 159 160 161 162
        on right: 143
    UnaryExpr (164)
        on left: 163 164 165 166 167 168 169 170
        on right: 139 164 165 166 167 168 169 170
    PrimaryExpr (165)
        on left: 171 172 173 174 175 176 177 178
        on right: 163 172 175 176 177 178
    Conversion (166)
        on left: 179 180
        on right: 174
    MethodExpr (167)
        on left: 181
        on right: 173
    MethodName (168)
        on left: 182
        on right: 10 181
    Operand (169)
        on left: 183 184 185 186 187
        on right: 171
    BasicLit (170)
        on left: 188 189 190 191 192 193 194
        on right: 184
    CompositeLit (171)
        on left: 195 196
        on right: 185
    LiteralType (172)
        on left: 197 198 199 200 201 202
        on right: 195
    LiteralValue (173)
        on left: 203 204 205
        on right: 195 196 212 214
    ElementList (174)
        on left: 206 207
        on right: 203 204 206
    KeyedElement (175)
        on left: 208 209
        on right: 206 207
    Key (176)
        on left: 210 211 212
        on right: 208
    Element (177)
        on left: 213 214
        on right: 208 209
    OperandName (178)
        on left: 215 216
        on right: 183 216
    int_lit (179)
        on left: 217 218 219 220
        on right: 188
    imaginary_lit (180)
        on left: 221
        on right: 190
    float_lit (181)
        on left: 222 223
        on right: 189
    FunctionLit (182)
        on left: 224
        on right: 186
    Block (183)
        on left: 225
        on right: 6 7 10 20 26 27 28 29 66 67 68 69 70 71 224
    Statements (184)
        on left: 226 227
        on right: 58 79 225 226
    Selector (185)
        on left: 228
        on right: 175
    Index (186)
        on left: 229 230
        on right: 176
    Slice (187)
        on left: 231 232 233 234 235 236
        on right: 177
    TypeAssertion (188)
        on left: 237
        on right: 178
    Arguments (189)
        on left: 238 239 240 241 242 243 244 245
        on right: 172
    ExpressionList (190)
        on left: 246 247
        on right: 37 45 62 80 89 90 113 114 125 126 127 128 129 130 131 132 133 134 135 136 137 138 179 180 187 238 239 240 244 246
    Type (191)
        on left: 248 249 250 251 252 253 254 255 256 257 258
        on right: 89 98 99 112 113 179 180 181 199 237 241 242 243 244 250 261 262 265 270 271 278 282 288 289 291 303 304 305 306 308
    TypeArgs (192)
        on left: 259 260
        on right: 249 274 275
    TypeList (193)
        on left: 261 262
        on right: 259 260 261
    TypeName (194)
        on left: 263 264
        on right: 248 249 264 274 275 276 277
    ArrayType (195)
        on left: 265
        on right: 198 251
    StructType (196)
        on left: 266 267
        on right: 197 253
    DeclList (197)
        on left: 268 269
        on right: 266 268
    FieldDecl (198)
        on left: 270 271 272 273
        on right: 268 269
    EmbeddedField (199)
        on left: 274 275 276 277
        on right: 272 273
    PointerType (200)
        on left: 278
        on right: 252
    FunctionType (201)
        on left: 279
        on right: 254
    Signature (202)
        on left: 280 281 282
        on right: 6 7 8 9 10 224 279 298
    Parameters (203)
        on left: 283 284 285
        on right: 11 280 281 282
    ParameterList (204)
        on left: 286 287
        on right: 283 285 286
    ParameterDecl (205)
        on left: 288 289 290 291
        on right: 286 287
    IdentifierList (206)
        on left: 292 293
        on right: 38 63 87 88 105 112 113 114 125 126 270 271 288 289 290 293
    InterfaceType (207)
        on left: 294 295
        on right: 255
    InterfaceElemList (208)
        on left: 296 297
        on right: 294 296
    InterfaceElem (209)
        on left: 298 299
        on right: 296 297
    TypeElem (210)
        on left: 300 301
        on right: 106 299 300
    TypeTerm (211)
        on left: 302 303
        on right: 300 301
    SliceType (212)
        on left: 304
        on right: 200 256
    MapType (213)
        on left: 305
        on right: 201 257
    ChannelType (214)
        on left: 306 307 308
        on right: 258


State 0

    0 $accept: • prog $end

    PACKAGE  shift, and go to state 1

    prog  go to state 2


State 1

    1 prog: PACKAGE • IMPORTS

    IMPORTS  shift, and go to state 3


State 2

    0 $accept: prog • $end
    2 prog: prog • TopLevelDecl

    $end      shift, and go to state 4
    FUNCTION  shift, and go to state 5
    VAR       shift, and go to state 6
    CONST     shift, and go to state 7
    TYPE      shift, and go to state 8

    TopLevelDecl  go to state 9
    FunctionDecl  go to state 10
    MethodDecl    go to state 11
    Declaration   go to state 12
    ConstDecl     go to state 13
    TypeDecl      go to state 14
    VarDecl       go to state 15


State 3

    1 prog: PACKAGE IMPORTS •

    $default  reduce using rule 1 (prog)


State 4

    0 $accept: prog $end •

    $default  accept


State 5

    6 FunctionDecl: FUNCTION • id TypeParameters Signature Block
    7             | FUNCTION • id Signature Block
    8             | FUNCTION • id Signature
    9             | FUNCTION • id TypeParameters Signature
   10 MethodDecl: FUNCTION • Receiver MethodName Signature Block

    id   shift, and go to state 16
    '('  shift, and go to state 17

    Receiver    go to state 18
    Parameters  go to state 19


State 6

  107 VarDecl: VAR • VarSpec
  108        | VAR • '(' VarSpecList ')'
  109        | VAR • '(' ')'

    id   shift, and go to state 20
    '('  shift, and go to state 21

    VarSpec         go to state 22
    IdentifierList  go to state 23


State 7

   82 ConstDecl: CONST • ConstSpec
   83          | CONST • '(' ConstSpecList ')'
   84          | CONST • '(' ')'

    id   shift, and go to state 20
    '('  shift, and go to state 24

    ConstSpec       go to state 25
    IdentifierList  go to state 26


State 8

   91 TypeDecl: TYPE • TypeSpec
   92         | TYPE • '(' TypeSpecList ')'
   93         | TYPE • '(' ')'

    id   shift, and go to state 27
    '('  shift, and go to state 28

    TypeSpec   go to state 29
    AliasDecl  go to state 30
    TypeDef    go to state 31


State 9

    2 prog: prog TopLevelDecl •

    $default  reduce using rule 2 (prog)


State 10

    4 TopLevelDecl: FunctionDecl •

    $default  reduce using rule 4 (TopLevelDecl)


State 11

    5 TopLevelDecl: MethodDecl •

    $default  reduce using rule 5 (TopLevelDecl)


State 12

    3 TopLevelDecl: Declaration •

    $default  reduce using rule 3 (TopLevelDecl)


State 13

   41 Declaration: ConstDecl •

    $default  reduce using rule 41 (Declaration)


State 14

   42 Declaration: TypeDecl •

    $default  reduce using rule 42 (Declaration)


State 15

   43 Declaration: VarDecl •

    $default  reduce using rule 43 (Declaration)


State 16

    6 FunctionDecl: FUNCTION id • TypeParameters Signature Block
    7             | FUNCTION id • Signature Block
    8             | FUNCTION id • Signature
    9             | FUNCTION id • TypeParameters Signature

    '('  shift, and go to state 17
    '['  shift, and go to state 32

    '('  [reduce using rule 102 (TypeParameters)]

    TypeParameters  go to state 33
    Signature       go to state 34
    Parameters      go to state 35


State 17

  283 Parameters: '(' • ParameterList ')'
  284           | '(' • ')'
  285           | '(' • ParameterList ',' ')'

    id     shift, and go to state 20
    POINT  shift, and go to state 36
    ')'    shift, and go to state 37

    ParameterList   go to state 38
    ParameterDecl   go to state 39
    IdentifierList  go to state 40


State 18

   10 MethodDecl: FUNCTION Receiver • MethodName Signature Block

    id  shift, and go to state 41

    MethodName  go to state 42


State 19

   11 Receiver: Parameters •

    $default  reduce using rule 11 (Receiver)


State 20

  292 IdentifierList: id •
  293               | id • ',' IdentifierList

    ','  shift, and go to state 43

    ','       [reduce using rule 292 (IdentifierList)]
    $default  reduce using rule 292 (IdentifierList)


State 21

  108 VarDecl: VAR '(' • VarSpecList ')'
  109        | VAR '(' • ')'

    id   shift, and go to state 20
    ')'  shift, and go to state 44

    VarSpecList     go to state 45
    VarSpec         go to state 46
    IdentifierList  go to state 23


State 22

  107 VarDecl: VAR VarSpec •

    $default  reduce using rule 107 (VarDecl)


State 23

  112 VarSpec: IdentifierList • Type
  113        | IdentifierList • Type EQ ExpressionList
  114        | IdentifierList • EQ ExpressionList

    FUNCTION   shift, and go to state 47
    id         shift, and go to state 48
    MAP        shift, and go to state 49
    INTERFACE  shift, and go to state 50
    CHAN       shift, and go to state 51
    STRUCT     shift, and go to state 52
    EQ         shift, and go to state 53
    POINTER    shift, and go to state 54
    '('        shift, and go to state 55
    '['        shift, and go to state 56
    '*'        shift, and go to state 57

    Type           go to state 58
    TypeName       go to state 59
    ArrayType      go to state 60
    StructType     go to state 61
    PointerType    go to state 62
    FunctionType   go to state 63
    InterfaceType  go to state 64
    SliceType      go to state 65
    MapType        go to state 66
    ChannelType    go to state 67


State 24

   83 ConstDecl: CONST '(' • ConstSpecList ')'
   84          | CONST '(' • ')'

    id   shift, and go to state 20
    ')'  shift, and go to state 68

    ConstSpecList   go to state 69
    ConstSpec       go to state 70
    IdentifierList  go to state 26


State 25

   82 ConstDecl: CONST ConstSpec •

    $default  reduce using rule 82 (ConstDecl)


State 26

   87 ConstSpec: IdentifierList • ConstExpr
   88          | IdentifierList •

    FUNCTION   shift, and go to state 47
    id         shift, and go to state 48
    MAP        shift, and go to state 49
    INTERFACE  shift, and go to state 50
    CHAN       shift, and go to state 51
    STRUCT     shift, and go to state 52
    EQ         shift, and go to state 71
    POINTER    shift, and go to state 54
    '('        shift, and go to state 55
    '['        shift, and go to state 56
    '*'        shift, and go to state 57

    FUNCTION   [reduce using rule 88 (ConstSpec)]
    id         [reduce using rule 88 (ConstSpec)]
    MAP        [reduce using rule 88 (ConstSpec)]
    INTERFACE  [reduce using rule 88 (ConstSpec)]
    CHAN       [reduce using rule 88 (ConstSpec)]
    STRUCT     [reduce using rule 88 (ConstSpec)]
    POINTER    [reduce using rule 88 (ConstSpec)]
    '('        [reduce using rule 88 (ConstSpec)]
    '['        [reduce using rule 88 (ConstSpec)]
    '*'        [reduce using rule 88 (ConstSpec)]
    $default   reduce using rule 88 (ConstSpec)
